popup overlapping issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -1549,6 +1549,7 @@ $roboto: "Roboto",
 }
 
 .MuiDrawer-root.MuiDrawer-modal {
+  z-index: 1000 !important;
   .MuiBackdrop-root {
     max-height: 100vh;
   }
